# benchmarking-tool

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose-config-a.yaml  docker-compose-config-c.yaml  loki-config.yaml  pools-latency-calculator.dockerfile  run-benchmarking-tool.sh  sri-roles.dockerfile  sv1-ckpool.dockerfile  sv1-ckproxy.dockerfile  sv1-pool.dockerfile  sv1-public-pool.dockerfile  sv2-roles.dockerfile  template-provider.dockerfile
.githooks/: pre-push
.github/workflows/: ci.yaml
conf/: ckpool.conf  ckproxy.conf
containers-scripts/: healthcheck.sh  update-mainnet-chainstate.sh
custom-configs/sri-roles/: bitcoin-sv1-node-pool.conf  bitcoin-tp-miner.conf  bitcoin-tp-pool.conf
custom-configs/sri-roles/config-a/: jdc-config-a-docker-example.toml  jds-config-a-docker-example.toml  pool-config-a-docker-example.toml  tproxy-config-a-docker-example.toml
custom-configs/sri-roles/config-c/: pool-config-c-docker-example.toml  tproxy-config-c-docker-example.toml
custom-configs/sv1-pool/: .env  rpc.js
custom-configs/sv1-public-pool/: .env
docs/: benchmarking-tool-overview.md  requirements-document.md
grafana/provisioning/dashboards/config-a/: Docker Prometheus Monitoring-1571332751387.json
grafana/provisioning/dashboards/config-c/: Docker Prometheus Monitoring-1571332751387.json
log-server/: Cargo.toml  Dockerfile
log-server/src/: main.rs
pools-latency-calculator/: Cargo.toml  Dockerfile  monitor_and_apply_latency.sh
pools-latency-calculator/src/: main.rs
prometheus/: prometheus.yml
promtail/config/config-a/: promtail-local-config.yaml
promtail/config/config-c/: promtail-local-config.yaml
sv1-custom-proxy/: Cargo.toml  Dockerfile
sv1-custom-proxy/src/: main.rs
sv2-custom-proxy/: Cargo.toml  Dockerfile
sv2-custom-proxy/src/: main.rs
sv2-new-job-proxy/: Cargo.toml  Dockerfile
sv2-new-job-proxy/src/: main.rs
sv2-pool-new-job-proxy/: Cargo.toml  Dockerfile
sv2-pool-new-job-proxy/src/: main.rs
