[package]
name = "log-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tar = "0.4.38"
warp = "0.3.1"
env_logger = "0.11.5"
log = "0.4"
bollard = "0.17"