[package]
name = "sv2-custom-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
demand-easy-sv2 = { version = "=0.6.0" }
prometheus = "0.13"
warp = "0.3"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.120"
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11.6"
#serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
